@@ -18,6 +18,7 @@
 - water surge ability
 - wind dodge ability
 - wind slash ability
+- config for randomizing zanpakuto abilities or not water stays randomized in both cases
 
 ## changes
 - every playthrough won't have the same abilities for shinigami when you unlock shikai depending on your stats -or not- you might get other abilities
